Add basic HTML content

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section class="top">
 
+  </section>
+
+  <section class="bottom">
+
+  </section>
+
+  <footer>
+    <nav>
+      <a href="#">about us</a>
+      <a href="#">support</a>
+      <a href="#">blog</a>
+      <a href="#">press</a>
+      <a href="#">api</a>
+      <a href="#">jobs</a>
+      <a href="#">privacy</a>
+      <a href="#">terms</a>
+    </nav>
+    <div class="copyright">
+      2014 instagram
+    </div>
+  </footer>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
