--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,10 +7,25 @@
 </head>
 <body>
   <section class="top">
+    <img src="images/brand.png">
+    <div class="log-in">
+      <img src="images/home.png">
+      <p class="log-in">Log in</p>
+    </div>
 
+    <img src="images/phones.png">
   </section>
 
   <section class="bottom">
+    <div class="content">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>  Oh yeah, did we mention it's free?</p>
+    </div>
+
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
 
   </section>
 
@@ -26,29 +41,10 @@
       <a href="#">terms</a>
     </nav>
     <div class="copyright">
-      2014 instagram
+      &copy; 2014 instagram
     </div>
   </footer>
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
