--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <section class="top">
-    <img src="images/brand.png">
+    <img class="brand" src="images/brand.png">
     <div class="log-in">
-      <img src="images/home.png">
+      <img class "home" src="images/home.png">
       <p class="log-in">Log in</p>
     </div>
 
-    <img src="images/phones.png">
+    <img class="phones" src="images/phones.png">
   </section>
 
   <section class="bottom">
@@ -24,8 +24,8 @@
       <p>  Oh yeah, did we mention it's free?</p>
     </div>
 
-    <img src="images/badge-iphone.png">
-    <img src="images/badge-android.png">
+    <img class="button" src="images/badge-iphone.png">
+    <img class="button" src="images/badge-android.png">
 
   </section>
 
