--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,46 +5,52 @@
   <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  <section class="top">
-    <img class="brand" src="images/brand.png">
-    <div class="log-in">
-      <img class "home" src="images/home.png">
-      <p class="log-in">Log in</p>
+  <div class="top">
+  </div>
+
+  <div class="container">
+    <div class="left-box">
+      <img class="phones" src="images/phones.png">
     </div>
 
-    <img class="phones" src="images/phones.png">
-  </section>
+    <div class="right-box">
+      <div class="top-right-box">
+        <div class="ig-logo">
+          <img class="brand" src="images/brand.png">
+        </div>
+        
+        <div class="log-in">
+          <img class "home" src="images/home.png">
+          <p class="log-in">Log in</p>
+        </div>
+      </div>
 
-  <section class="bottom">
-    <div class="content">
-      <h1>Capture and Share the World's Moments</h1>
-      <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-      <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <p>  Oh yeah, did we mention it's free?</p>
+      <div class="content-box">
+        <div class="content">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+        </div>
+
+        <div class="button-box">
+          <div class="apple">
+            <img class="button" src="images/badge-iphone.png">
+          </div>
+
+          <div class="android">
+            <img class="button" src="images/badge-android.png">
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <img class="button" src="images/badge-iphone.png">
-    <img class="button" src="images/badge-android.png">
-
-  </section>
-
-  <footer>
-    <nav>
-      <a href="#">about us</a>
-      <a href="#">support</a>
-      <a href="#">blog</a>
-      <a href="#">press</a>
-      <a href="#">api</a>
-      <a href="#">jobs</a>
-      <a href="#">privacy</a>
-      <a href="#">terms</a>
-    </nav>
-    <div class="copyright">
-      &copy; 2014 instagram
-    </div>
-  </footer>
-
+  <div class="bottom">
+  </div>
 
 </body>
 </html>
