--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,7 +20,7 @@
         <div class="ig-logo">
           <img class="brand" src="images/brand.png">
         </div>
-        
+
         <div class="log-in">
           <img class "home" src="images/home.png">
           <p class="log-in">Log in</p>
@@ -49,8 +49,19 @@
     </div>
   </div>
 
-  <div class="bottom">
-  </div>
+  <footer>
+    <nav>
+      <a class="link" href="#">about us</a>
+      <a class="link" href="#">support</a>
+      <a class="link" href="#">blog</a>
+      <a class="link" href="#">press</a>
+      <a class="link" href="#">api</a>
+      <a class="link" href="#">jobs</a>
+      <a class="link" href="#">privacy</a>
+      <a class="link" href="#">terms</a>
+      <p class="link">© 2014 instagram</p>
+    </nav>
+  </footer>
 
 </body>
 </html>
